server/compilers/goLiteJS/src/test/ml2/valid/cast5.go
// casting basic types permutations
package main

var n int = 23
var x float64 = 23.0
var p bool = true
var a rune = 'a'

var m int = int(a)
var y float64 = float64(n)
var q bool = bool(x)
var b rune = rune(p)
