server/compilers/goLiteJS/src/test/ml2/invalid/cast5.go
// casting type before declaration
package main

var int n = 23
var s char = char(n)

type char rune
